--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>画像投稿フォーム</h1>
 
 <% if @post_image.errors.any? %>
@@ -19,3 +20,5 @@
 
   <%= f.submit '投稿' %>
 <% end %>
+
+</div>
