--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -1,24 +1,31 @@
 <div class="container">
-<h1>画像投稿フォーム</h1>
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+      <h5 class="text-dark bg-light p-4 mb-0">画像投稿フォーム</h5>
+      <div class="form-body p-4">
+        <% if @post_image.errors.any? %>
+          <ul class="alert alert-danger" role="alert">
+            <h6 class="alert-heading">
+              <%= @post_image.errors.count %>件のエラーが発生しました
+            </h6>
+            <% @post_image.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+        <%= form_with model: @post_image do |f| %>
+          <h4>画像</h4>
+          <%= f.file_field :image, accept: "image/*" %>
+          <h4>ショップ名</h4>
+          <%= f.text_field :shop_name %>
+          <h4>説明</h4>
+          <%= f.text_area :caption %>
 
-<% if @post_image.errors.any? %>
-  <%= @post_image.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @post_image.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+          <%= f.submit '投稿' %>
+        <% end %>
 
-<%= form_with model: @post_image do |f| %>
-  <h4>画像</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-  <h4>ショップ名</h4>
-  <%= f.text_field :shop_name %>
-  <h4>説明</h4>
-  <%= f.text_area :caption %>
-
-  <%= f.submit '投稿' %>
-<% end %>
+      </div>
+    </div>
+  </div>
 
 </div>
