--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -14,10 +14,14 @@
           </ul>
         <% end %>
         <%= form_with model: @post_image do |f| %>
-          <h4>画像</h4>
-          <%= f.file_field :image, accept: "image/*" %>
-          <h4>ショップ名</h4>
-          <%= f.text_field :shop_name %>
+          <%= f.file_field :image, accept: "image/*" class: "w-100" %>
+          <div class="input-group mb-3 mt-4">
+            <div class="input-group-prepend">
+              <span class="input-group-text" aria-hidden="true"><i class="fas fa-building"></i></span>
+            </div>
+            <%= f.text_field :shop_name, class: "form-control", placeholder: "ショップ名" %>
+          </div>
+
           <h4>説明</h4>
           <%= f.text_area :caption %>
 
