--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -14,22 +14,18 @@
           </ul>
         <% end %>
         <%= form_with model: @post_image do |f| %>
-          <%= f.file_field :image, accept: "image/*" class: "w-100" %>
+          <%= f.file_field :image, accept: "image/*", class: "w-100" %>
           <div class="input-group mb-3 mt-4">
             <div class="input-group-prepend">
               <span class="input-group-text" aria-hidden="true"><i class="fas fa-building"></i></span>
             </div>
             <%= f.text_field :shop_name, class: "form-control", placeholder: "ショップ名" %>
           </div>
-
-          <h4>説明</h4>
-          <%= f.text_area :caption %>
-
-          <%= f.submit '投稿' %>
+          <%= f.text_area :caption, class: "form-control", rows: "3", placeholder: "コメントここに" %>
+          <hr>
+          <%= f.submit '投稿', class: "btn btn-lg btn-block btn-info mt-4" %>
         <% end %>
-
       </div>
     </div>
   </div>
-
 </div>
